# colormap2d

./: LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  publish.yml
notebooks/: colormap.ipynb
src/colormap2d/: __init__.py  cm.py
src/colormap2d/data/: __init__.py  cyclic_pinwheel.npy  pinwheel.npy
tests/: test_cm.py
