[project]
name = "colormap2d"
version = "0.1.0"
description = "Colormap for 2D vectors"
authors = [
    {name = "Matthieu Thiboust", email = "14574229+mthiboust@users.noreply.github.com"},
]
dependencies = [
    "numpy>=1.25.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ruff>=0.1.2",
    "ipykernel>=6.26.0",
    "matplotlib>=3.8.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
